--- a/temalar/sosero/index02.html
+++ b/temalar/sosero/index02.html
@@ -7,7 +7,7 @@ title: SOSERO ÜRÜNLER
           <section class="regular slider">
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -22,7 +22,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -37,7 +37,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -52,7 +52,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -67,7 +67,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -82,7 +82,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -97,7 +97,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -112,7 +112,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -127,7 +127,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -142,7 +142,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -157,7 +157,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -172,7 +172,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
@@ -187,7 +187,7 @@ title: SOSERO ÜRÜNLER
             </div>
             <div class="product-card" >
               <div class="product-img">
-                <img src="http://via.placeholder.com/200x200" alt="">
+                <img src="https://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
               <div class="product-info" data-gnl="1 1p">
