--- a/temalar/sosero/index02.html
+++ b/temalar/sosero/index02.html
@@ -2,7 +2,7 @@
 layout: sosero/urunler
 title: SOSERO ÜRÜNLER
 ---
-      <div data-gnl="23 24p soldan-1 24p-aralık ortada" data-kçk="">
+      <div data-gnl="23 24p soldan-1 24p-aralık ortada" data-kçk="" style="height:70vh;">
         <div data-gnl="1 1p dürmeden" style="margin-left:-40px;/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
           <section class="regular slider">
             <div class="product-card" >
