--- a/temalar/sosero/index04.html
+++ b/temalar/sosero/index04.html
@@ -2,7 +2,7 @@
 layout: sosero/icerik
 title: SOSERO
 ---
-<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="min-height:30ex; background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
 </div>
 <div data-gnl="1 1p" data-kçk="1 2p sığdır">
