--- a/temalar/sosero/index03.html
+++ b/temalar/sosero/index03.html
@@ -7,39 +7,75 @@ title: SOSERO
       </div>
       <div data-gnl="1 1p" data-kçk="1 2p sığdır">
         <div data-gnl="18 24p soldan-1 24p-aralık">
-          <article class="yemek">
-            <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
-            <div class="yemek-içeriği">
+          <article class="yemek regular2 slider">
+            <div>
+              <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
+              <div class="yemek-içeriği">
 
-              <h2>Malzemeler</h2>
-              <ul>
-                <li>5 adet büyük boy sulu domates</li>
-                <li>1 yemek kaşığı salça</li>
-                <li>1 diş sarımsak</li>
-                <li>1 yemek kaşığı un</li>
-                <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
-                <li>4 su bardağı sıcak et suyu</li>
-                <li>2 çay bardağı sıcak süt</li>
-              </ul>
+                <h2>Malzemeler</h2>
+                <ul>
+                  <li>5 adet büyük boy sulu domates</li>
+                  <li>1 yemek kaşığı salça</li>
+                  <li>1 diş sarımsak</li>
+                  <li>1 yemek kaşığı un</li>
+                  <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
+                  <li>4 su bardağı sıcak et suyu</li>
+                  <li>2 çay bardağı sıcak süt</li>
+                </ul>
 
-              <h2>Sunumu/Servisi için:</h2>
-              <ul>
-                <li>1 su bardağı rendelenmiş kaşar peyniri</li>
-              </ul>
+                <h2>Sunumu/Servisi için:</h2>
+                <ul>
+                  <li>1 su bardağı rendelenmiş kaşar peyniri</li>
+                </ul>
 
-              <h2>Hazırlanışı:</h2>
-              <p>
-                Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
-                ateşte, tereyağında kavurun, ardından salçayı ekleyin.
-                Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
-                ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
-                ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
-                için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
-                karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
-                ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
-                rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
-                olsun.
-              </p>
+                <h2>Hazırlanışı:</h2>
+                <p>
+                  Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
+                  ateşte, tereyağında kavurun, ardından salçayı ekleyin.
+                  Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
+                  ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
+                  ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
+                  için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
+                  karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
+                  ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
+                  rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
+                  olsun.
+                </p>
+              </div>
+              <div>
+                <h1 class="yemek-adi">DOMATES ÇORBASI 2</h1>
+                <div class="yemek-içeriği">
+
+                  <h2>Malzemeler</h2>
+                  <ul>
+                    <li>5 adet büyük boy sulu domates</li>
+                    <li>1 yemek kaşığı salça</li>
+                    <li>1 diş sarımsak</li>
+                    <li>1 yemek kaşığı un</li>
+                    <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
+                    <li>4 su bardağı sıcak et suyu</li>
+                    <li>2 çay bardağı sıcak süt</li>
+                  </ul>
+
+                  <h2>Sunumu/Servisi için:</h2>
+                  <ul>
+                    <li>1 su bardağı rendelenmiş kaşar peyniri</li>
+                  </ul>
+
+                  <h2>Hazırlanışı:</h2>
+                  <p>
+                    Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
+                    ateşte, tereyağında kavurun, ardından salçayı ekleyin.
+                    Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
+                    ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
+                    ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
+                    için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
+                    karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
+                    ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
+                    rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
+                    olsun.
+                  </p>
+                </div>
             </div>
           </article>
         </div>
