--- a/temalar/sosero/index04.html
+++ b/temalar/sosero/index04.html
@@ -2,11 +2,11 @@
 layout: sosero/icerik
 title: SOSERO
 ---
-<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="min-height:30ex; background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
 </div>
 <div data-gnl="1 1p" data-kçk="1 2p sığdır">
-  <div data-gnl="18 24p soldan-1 24p-aralık">
+  <div data-gnl="22 24p soldan-1 24p-aralık" data-kçk="18 24p">
     <article class="yemek regular2 slider">
       <div>
         <h1 class="yemek-adi">ÜRETİM TESİSLERİ</h1>
