--- a/temalar/sosero/index09.html
+++ b/temalar/sosero/index09.html
@@ -6,7 +6,7 @@ title: SOSERO İLETİŞİM
 
 </div>
 <div data-gnl="1 1p" data-kçk="1 2p sığdır">
-  <div data-gnl="18 24p soldan-1 24p-aralık">
+  <div data-gnl="22 24p soldan-1 24p-aralık" data-kçk="18 24p">
     <article class="yemek" style="width:100%;">
       <h1 class="yemek-adi">İLETİŞİM</h1>
       <div class="yemek-içeriği" data-gnl="1 1p">
