--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -2,7 +2,7 @@
 layout: sosero/haberler
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-kçk="sığdır" style="height:70vh;">
+      <div data-gnl="22 23p ortada" data-kçk="sığdır">
         <div data-gnl="22 23p" style="height:100%;">
             <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
               <div class="product-content" data-gnl="1 1p sığdır kaymadan" style="height:100%;">
@@ -22,7 +22,7 @@ title: SOSERO ÜRÜN
             </article>
             <div data-kçk="1 23p küçükleri-gizle ortada">
               <div class="kesit">
-                
+
               </div>
             </div>
             <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
