--- a/temalar/sosero/paketler.html
+++ b/temalar/sosero/paketler.html
@@ -1,13 +1,12 @@
 ---
-layout: sosero/urunler
-title: SOSERO ÜRÜNLER
+layout: sosero/paketler
+title: SOSERO ÜRÜN PAKETLERİ
 ---
-<section class="regular slider">
-  <div class="product-card" >
+<section class="regular slider paket">
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -17,12 +16,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -32,12 +30,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -47,12 +44,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -62,12 +58,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -77,12 +72,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -92,12 +86,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -107,12 +100,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -122,12 +114,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -137,12 +128,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -152,12 +142,11 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
+  </a>
+  <a href="/temalar/sosero/urun.html" class="product-card beyaz">
     <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
-    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -167,35 +156,5 @@ title: SOSERO ÜRÜNLER
         +
       </div>
     </div>
-  </div>
-  <div class="product-card" >
-    <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </div>
-  <div class="product-card" >
-    <div class="product-img">
-      <img src="https://via.placeholder.com/180x180" alt="">
-    </div>
-    <div class="product-imgx"></div>
-    <div class="product-info" data-gnl="1 1p">
-      <div data-gnl="1g">
-        <h2>AKDENİZ SALATASI</h2>
-        <p>ZEYTİN EZMESİ</p>
-      </div>
-      <div class="open-it" data-gnl="0 göbekte-ol">
-        +
-      </div>
-    </div>
-  </div>
+  </a>
 </section>
