--- a/temalar/sosero/tarifler.html
+++ b/temalar/sosero/tarifler.html
@@ -3,10 +3,10 @@ layout: sosero/icerik
 title: SOSERO
 ---
 
-      <div data-gnl="1 1p" data-kçk="1 2p sütun kaymadan"  style="min-height: 200px; background: url('/temalar/sosero/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
+      <div data-gnl="1 1p" data-byk="1 2p sütun kaymadan"  style="min-height: 200px; background: url('/temalar/sosero/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
       </div>
-      <div data-gnl="1 1p" data-kçk="1 2p sığdır">
-        <div data-gnl="22 24p soldan-1 24p-aralık" data-kçk="18 24p">
+      <div data-gnl="1 1p" data-byk="1 2p sığdır">
+        <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
           <article class="yemek regular2 slider">
             <div>
               <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
