--- a/temalar/sosero/urunler.html
+++ b/temalar/sosero/urunler.html
@@ -1,12 +1,14 @@
 ---
-layout: sosero/paketler
-title: SOSERO ÜRÜN PAKETLERİ
+layout: sosero/urunler
+title: SOSERO ÜRÜNLER
 ---
 <section class="regular slider">
-  <div class="product-card beyaz">
+
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -16,11 +18,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -30,11 +33,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -44,11 +48,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -58,11 +63,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -72,11 +78,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -86,11 +93,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -100,11 +108,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -114,11 +123,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -128,11 +138,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -142,11 +153,12 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
-  <div class="product-card beyaz">
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
     <div class="product-img">
-      <img src="http://via.placeholder.com/200x200" alt="">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
+    <div class="product-imgx"></div>
     <div class="product-info" data-gnl="1 1p">
       <div data-gnl="1g">
         <h2>AKDENİZ SALATASI</h2>
@@ -156,5 +168,35 @@ title: SOSERO ÜRÜN PAKETLERİ
         +
       </div>
     </div>
-  </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
+  <a href="/temalar/sosero/paketler.html" class="product-card">
+    <div class="product-img">
+      <img src="/temalar/sosero/assets/img/ege_zeytin_yagli.png" alt="">
+    </div>
+    <div class="product-imgx"></div>
+    <div class="product-info" data-gnl="1 1p">
+      <div data-gnl="1g">
+        <h2>AKDENİZ SALATASI</h2>
+        <p>ZEYTİN EZMESİ</p>
+      </div>
+      <div class="open-it" data-gnl="0 göbekte-ol">
+        +
+      </div>
+    </div>
+  </a>
 </section>
