--- a/temalar/sosero/hakkimizda.html
+++ b/temalar/sosero/hakkimizda.html
@@ -2,10 +2,10 @@
 layout: sosero/icerik
 title: SOSERO
 ---
-<div data-gnl="1 1p" data-kçk="1 2p sütun kaymadan" style="min-height:200px; background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-gnl="1 1p" data-byk="1 2p sütun kaymadan" style="min-height:200px; background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 </div>
-<div data-gnl="1 1p" data-kçk="1 2p sığdır">
-  <div data-gnl="22 24p soldan-1 24p-aralık" data-kçk="18 24p">
+<div data-gnl="1 1p" data-byk="1 2p sığdır">
+  <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
     <article class="yemek">
       <h1 class="yemek-adi">HAKKIMIZDA</h1>
       <div class="yemek-içeriği">
