--- a/temalar/sosero/iletisim.html
+++ b/temalar/sosero/iletisim.html
@@ -2,11 +2,11 @@
 layout: sosero/iletisim
 title: SOSERO İLETİŞİM
 ---
-<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="min-height:30vh;background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-gnl="1 1p" data-byk="1 2p ortada sütun kaymadan" style="min-height:30vh;background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
 </div>
-<div data-gnl="1 1p" data-kçk="1 2p sığdır">
-  <div data-gnl="22 24p soldan-1 24p-aralık" data-kçk="18 24p">
+<div data-gnl="1 1p" data-byk="1 2p sığdır">
+  <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
     <article class="yemek" style="width:100%;">
       <h1 class="yemek-adi">İLETİŞİM</h1>
       <div class="yemek-içeriği" data-gnl="1 1p">
