--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -2,7 +2,7 @@
 layout: sosero/haberler
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-kçk="sığdır">
+      <div data-gnl="22 23p ortada" data-byk="1 1p">
         <div data-gnl="22 23p" style="height:100%;">
             <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
               <div class="product-content" data-gnl="1 1p sığdır kaymadan" style="height:100%;">
