--- a/temalar/sosero/urun.html
+++ b/temalar/sosero/urun.html
@@ -2,9 +2,9 @@
 layout: sosero/urun
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-kçk="sığdır" style="height:70vh;">
+      <div data-gnl="22 23p ortada" data-byk="1 1p">
         <div data-gnl="22 23p">
-          <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
+          <article class="product" data-gnl="1 1p" style="justify-content:space-between;">
             <div class="product-content" data-gnl="1 1p kaymadan" data-kçk="sığdır">
               <div data-gnl="1 1p" data-kçk="1 2p sığdır sütun ortada kaymadan">
                 <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
