--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -2,14 +2,14 @@
 layout: sosero/haberler
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-byk="1 1p">
-        <div data-gnl="22 23p" style="height:100%;">
-            <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
-              <div class="product-content" data-gnl="1 1p sığdır kaymadan" style="height:100%;">
-                <div data-gnl="1 1p kaymadan" style="height:65%;">
+      <div data-gnl="22 23p ortada göbekte" data-byk="1 1p" style="min-height:70vh;">
+        <div data-gnl="22 23p" class="regularx2 slider">
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
-                <div class="product-content-alt" data-gnl="1 1p üstte" style="height:35%; background-color:rgba(55,138,0,.8); color:#fff; padding:0 20px">
+                <div class="product-content-alt" data-gnl="1 1p üstte">
                     <span class="date">Nisan 21, 2018</span>
                     <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
                     <p>
@@ -19,18 +19,18 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-            </article>
-            <div data-kçk="1 23p küçükleri-gizle ortada">
-              <div class="kesit">
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
 
+                </div>
               </div>
-            </div>
-            <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
-              <div class="product-content" data-gnl="1 1p sığdır kaymadan" style="height:100%;">
-                <div data-gnl="1 1p kaymadan" style="height:65%;">
+            </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
-                <div class="product-content-alt" data-gnl="1 1p üstte" style="height:35%; background-color:rgba(55,138,0,.8); color:#fff; padding:0 20px">
+                <div class="product-content-alt" data-gnl="1 1p üstte">
                     <span class="date">Nisan 21, 2018</span>
                     <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
                     <p>
@@ -40,6 +40,117 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
             </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
+                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+                </div>
+                <div class="product-content-alt" data-gnl="1 1p üstte">
+                    <span class="date">Nisan 21, 2018</span>
+                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+                    <p>
+                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+                    </p>
+                </div>
+              </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
+            </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
+                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+                </div>
+                <div class="product-content-alt" data-gnl="1 1p üstte">
+                    <span class="date">Nisan 21, 2018</span>
+                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+                    <p>
+                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+                    </p>
+                </div>
+              </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
+            </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
+                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+                </div>
+                <div class="product-content-alt" data-gnl="1 1p üstte">
+                    <span class="date">Nisan 21, 2018</span>
+                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+                    <p>
+                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+                    </p>
+                </div>
+              </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
+            </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
+                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+                </div>
+                <div class="product-content-alt" data-gnl="1 1p üstte">
+                    <span class="date">Nisan 21, 2018</span>
+                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+                    <p>
+                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+                    </p>
+                </div>
+              </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
+            </article>
+            <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+                <div data-gnl="1 1p kaymadan" style="height: 200px;">
+                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+                </div>
+                <div class="product-content-alt" data-gnl="1 1p üstte">
+                    <span class="date">Nisan 21, 2018</span>
+                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+                    <p>
+                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+                    </p>
+                </div>
+              </div>
+              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+                <div class="kesit">
+
+                </div>
+              </div>
+            </article>
+
         </div>
       </div>
