--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -2,7 +2,7 @@
 layout: sosero/haberler
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada göbekte" data-byk="1 1p" style="min-height:70vh;">
+      <div data-gnl="22 23p ortada göbekte" style="min-height:70vh;">
         <div data-gnl="22 23p" class="regularx2 slider">
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
