--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -2,29 +2,9 @@
 layout: sosero/haberler
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada göbekte" style="min-height:70vh;">
-        <div data-gnl="22 23p" class="regularx2 slider">
-            <article class="product" data-gnl="1 1p" data-byk="1 2p">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
-                <div data-gnl="1 1p kaymadan" style="height: 200px;">
-                  <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
-                </div>
-                <div class="product-content-alt" data-gnl="1 1p üstte">
-                    <span class="date">Nisan 21, 2018</span>
-                    <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
-                    <p>
-                      Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
-                      istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
-                      online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
-                    </p>
-                </div>
-              </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
-                <div class="kesit">
 
-                </div>
-              </div>
-            </article>
+        <div  class="news-slider slider">
+            
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
@@ -174,4 +154,3 @@ title: SOSERO ÜRÜN
             </article>
 
         </div>
-      </div>
